# dbt-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  CURRENT_STATE.md  README.md  RUNBOOK.md  manifest.json  pyproject.toml
.codex/environments/: environment.toml
ai-context/: critical-paths.yaml
docs/: diagram.d2
examples/aws_strands_agent/: requirements.txt
examples/crewai_agent/: pyproject.toml
examples/google_adk_agent/: README.md  pyproject.toml
examples/langgraph_agent/: pyproject.toml
examples/openai_agent/: pyproject.toml
examples/openai_responses/: pyproject.toml
examples/pydantic_ai_agent/: pyproject.toml
examples/remote_mcp/: pyproject.toml
pr/: 00-项目基线.md  01-当前有效需求索引.md  02-已实现需求索引.md  03-已过时需求索引.md  04-问题与修复索引.md  05-补充信息.md  06-需求关系图.md  index.json  知识库.json  说明.md
pr/需求/: 需求-01.md  需求-02.md  需求-03.md  需求-04.md  需求-05.md  需求-06.md  需求-07.md  需求-08.md
scripts/: doctor.sh  generate_docs.py  smoke.sh
src/dbt_mcp/: main.py  project_paths.py
src/dbt_mcp/config/: config.py  settings.py
src/dbt_mcp/dbt_cli/: binary_type.py  tools.py
src/dbt_mcp/dbt_codegen/: tools.py
src/dbt_mcp/lsp/: tools.py
src/dbt_mcp/lsp/providers/: local_lsp_client_provider.py  lsp_client_provider.py  project_lsp_client_provider.py
src/dbt_mcp/mcp/: api_key_auth.py  server.py
src/dbt_mcp/metricflow/: __init__.py  binary.py  tools.py
src/dbt_mcp/prompts/: prompts.py
src/dbt_mcp/prompts/dbt_cli/: execute_dbt_cmd.md
src/dbt_mcp/prompts/dbt_cli/args/: command_args.md
src/dbt_mcp/prompts/metricflow/: delete_project.md  delete_project_path.md  execute_mf_cmd.md  health-checks.md  is_project_exist.md  list.md  list_project_files.md  list_projects.md  query.md  read_project_file.md  tutorial.md  upload_project_files.md  upload_project_zip_url.md  validate-configs.md
src/dbt_mcp/prompts/metricflow/args/: command_args.md  extra_args.md  file_content.md  file_path.md  files.md  path.md  zip_url.md  (+1 more)
src/dbt_mcp/tools/: fields.py  human_descriptions.py  tool_names.py  toolsets.py
src/tools/: __init__.py  metricflow_unzip.py  metricflow_zip.py
tests/: conftest.py  env_vars.py
tests/integration/dbt_codegen/: test_dbt_codegen.py
tests/mocks/: config.py
tests/unit/: test_main.py
tests/unit/config/: test_config.py
tests/unit/dbt_cli/: test_binary_type.py  test_cli_integration.py  test_tools.py
tests/unit/dbt_codegen/: test_tools.py
tests/unit/lsp/: test_local_lsp_client_provider.py  test_lsp_tools.py
tests/unit/mcp/: test_api_key_auth.py
tests/unit/metricflow/: __init__.py  test_binary.py  test_file_tools.py  test_tools.py
tests/unit/tools/: test_tool_names.py  test_toolsets.py
tests/unit/tracking/: test_tracking.py
